Added monitoring files

--- a/LogFileGenerator/src/main/resources/application.conf
+++ b/LogFileGenerator/src/main/resources/application.conf
@@ -30,7 +30,7 @@ randomLogGenerator {
   aws_s3 {
   bucketName = "logfilegen"
   s3fileName = "output.txt"
-  localFileName = "./log/LogFileGenerator.2021-11-06.log"
+  localFileName = "./log/LogFileGenerator."
   }
 
 }
