--- a/SparkStreaming/src/main/resources/application.conf
+++ b/SparkStreaming/src/main/resources/application.conf
@@ -2,5 +2,12 @@ sparkStreaming {
 
 #boostrap server address
 kafkaServer = "127.0.0.1:9092"
-
+# set auto commit to false
+KafkaConsumerAutoCommit = "false"
+# set offset of kafka consumer to earliest
+KafkaConsumerOffset = "earliest"
+# Give kafka consumer groupID here
+KafkaConsumerGroupID = "kafkaGroup"
+# give kafka topic name here
+kafkaTopicName = "kafkaToSpark"
 }
