Moved constants to config file

--- a/SparkStreaming/src/main/resources/application.conf
+++ b/SparkStreaming/src/main/resources/application.conf
@@ -10,4 +10,12 @@ KafkaConsumerOffset = "earliest"
 KafkaConsumerGroupID = "kafkaGroup"
 # give kafka topic name here
 kafkaTopicName = "kafkaToSpark"
+#Destination email address
+targetAddressList = "garumu3@uic.edu"
+# Source email address
+sourceAddress = "garumu3@uic.edu"
+# The subject line for the email.
+subject = "Spark Log Notifications"
+#AWS email Subject body
+subjectBody = "The auto generated email from Spark Application"
 }
