Modified Email service code

--- a/SparkStreaming/src/main/resources/application.conf
+++ b/SparkStreaming/src/main/resources/application.conf
@@ -17,5 +17,5 @@ sourceAddress = "garumu3@uic.edu"
 # The subject line for the email.
 subject = "Spark Log Notifications"
 #AWS email Subject body
-subjectBody = "The auto generated email from Spark Application"
+subjectBody = "The auto generated email from Spark Application . You have a Warning/Error message"
 }
