--- a/LogMontoringService/src/main/resources/application.conf
+++ b/LogMontoringService/src/main/resources/application.conf
@@ -1,4 +1,8 @@
 config{
     FileName = "/mnt/efs/fs1"
-    KafkaServer
+    KafkaServer = "b-1.kafkacluster.7i0o0a.c21.kafka.us-east-1.amazonaws.com:9094,b-2.kafkacluster.7i0o0a.c21.kafka.us-east-1.amazonaws.com:9094"
+    keySerializer = "org.apache.kafka.common.serialization.StringSerializer"
+    valueSerializer = "org.apache.kafka.common.serialization.StringSerializer"
+    acks = "all"
+    topic = "AWSKafka"
 }
