Changed Topic name in consumer

--- a/SparkStreaming/src/main/resources/application.conf
+++ b/SparkStreaming/src/main/resources/application.conf
@@ -9,7 +9,7 @@ KafkaConsumerOffset = "earliest"
 # Give kafka consumer groupID here
 KafkaConsumerGroupID = "kafkaGroup"
 # give kafka topic name here
-kafkaTopicName = "kafkaToSpark"
+kafkaTopicName = "AWSKafka"
 #Destination email address
 targetAddressList = "garumu3@uic.edu"
 # Source email address
