--- a/LogMontoringService/src/main/resources/application.conf
+++ b/LogMontoringService/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 config{
     FileName = "/mnt/efs/fs1"
-    KafkaServer = "b-2.kafkacluster.7i0o0a.c21.kafka.us-east-1.amazonaws.com:9094,b-1.kafkacluster.7i0o0a.c21.kafka.us-east-1.amazonaws.com:9094"
+#     KafkaServer = "b-2.kafkacluster.7i0o0a.c21.kafka.us-east-1.amazonaws.com:9094,b-1.kafkacluster.7i0o0a.c21.kafka.us-east-1.amazonaws.com:9094"
+    kafkaServer = "b-1.kafkatest.hmb0ms.c5.kafka.us-east-1.amazonaws.com:9094,b-2.kafkatest.hmb0ms.c5.kafka.us-east-1.amazonaws.com:9094"
     keySerializer = "org.apache.kafka.common.serialization.StringSerializer"
     valueSerializer = "org.apache.kafka.common.serialization.StringSerializer"
     acks = "all"
