--- a/SparkStreaming/src/main/resources/application.conf
+++ b/SparkStreaming/src/main/resources/application.conf
@@ -1,7 +1,8 @@
 sparkStreaming {
 
 #boostrap server address
-kafkaServer = "b-2.kafkacluster.7i0o0a.c21.kafka.us-east-1.amazonaws.com:9094,b-1.kafkacluster.7i0o0a.c21.kafka.us-east-1.amazonaws.com:9094"
+# kafkaServer = "b-2.kafkacluster.7i0o0a.c21.kafka.us-east-1.amazonaws.com:9094,b-1.kafkacluster.7i0o0a.c21.kafka.us-east-1.amazonaws.com:9094"
+kafkaServer = "b-1.kafkatest.hmb0ms.c5.kafka.us-east-1.amazonaws.com:9094,b-2.kafkatest.hmb0ms.c5.kafka.us-east-1.amazonaws.com:9094"
 # set auto commit to false
 KafkaConsumerAutoCommit = "false"
 # set offset of kafka consumer to earliest
