Added changes for efs

--- a/LogMontoringService/src/main/resources/application.conf
+++ b/LogMontoringService/src/main/resources/application.conf
@@ -8,4 +8,6 @@ config{
     topic = "AWSKafka"
     securityProtocol = "SSL"
     sslTruststoreLocation = "/tmp/kafka.client.truststore.jks"
+
+    regEx = "ERROR"
 }
